--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/FreeRTOS-Kernel"]
 	path = lib/FreeRTOS-Kernel
 	url = https://github.com/FreeRTOS/FreeRTOS-Kernel.git
+[submodule "lib/STM32CubeF4"]
+	path = lib/STM32CubeF4
+	url = https://github.com/STMicroelectronics/STM32CubeF4.git
