Update cmake: Generate hex bin elf successfully

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/arm-gcc-toolchain.cmake)
 
 
 # Project Setup
-project( model1 C CXX)
+project( model1 C CXX ASM)
 
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
@@ -25,31 +25,43 @@ set(CMAKE_C_EXTENSIONS ON)
 # add_subdirectory(app)
 # aux_source_directory( app source_app)
 
-set( startup_script ${CMAKE_SOURCE_DIR}/lib/STM32CubeF4/Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/gcc/startup_stm32f411xe.s)
+
+
+# Customed Source File Setting
+set( startup_script ${CMAKE_SOURCE_DIR}/cfg/startup_stm32f411xe.S)
+
+set( cmsis_script   ${CMAKE_SOURCE_DIR}/cfg/system_stm32f4xx.c)
+
+set( config_include ${CMAKE_SOURCE_DIR}/cfg)
+
+set( config_define -DSTM32F411xE -DUSE_HAL_DRIVER)
 
 set( cpu_params         -mcpu=cortex-m4
                         -mthumb
                         -mfpu=fpv4-sp-d16
                         -mfloat-abi=hard)
 
+include_directories( BEFORE SYSTEM      ${CMAKE_SOURCE_DIR}/lib/STM32CubeF4/Drivers/CMSIS/Device/ST/STM32F4xx/Include
+                                        ${CMAKE_SOURCE_DIR}/lib/STM32CubeF4/Drivers/CMSIS/Core/Include
+                                        ${CMAKE_SOURCE_DIR}/lib/STM32CubeF4/Drivers/STM32F4xx_HAL_Driver/Inc
+                                        ${config_include})
+
+add_definitions( ${config_define})
+
+add_executable( ${PROJECT_NAME}         ${CMAKE_SOURCE_DIR}/main.c 
+                                        ${startup_script}
+                                        ${cmsis_script})
 
 
 
-add_executable( ${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/main.c ${startup_script})
 
-target_compile_definitions(${PROJECT_NAME} PRIVATE
-        -DUSE_HAL_DRIVER
-        -DSTM32F413xx
-        )
+target_compile_definitions(${PROJECT_NAME} PRIVATE      ${config_define})
 
-target_compile_options( ${PROJECT_NAME} PRIVATE
-        ${cpu_params}
-
-        -fdata-sections
-        -ffunction-sections
-        -Wall
-        $<$<CONFIG:Debug>:-Og>
-        )
+target_compile_options( ${PROJECT_NAME} PRIVATE         ${cpu_params}
+                                                        -fdata-sections
+                                                        -ffunction-sections
+                                                        -Wall
+                                                        $<$<CONFIG:Debug>:-Og>)
 
 target_link_options(${PROJECT_NAME} PRIVATE
         -T${CMAKE_SOURCE_DIR}/cfg/STM32F411CEUX_FLASH.ld
@@ -61,6 +73,14 @@ target_link_options(${PROJECT_NAME} PRIVATE
         -Wl,-Map=${PROJECT_NAME}.map,--cref
         -Wl,--gc-sections
         )
+
+set(HEX_FILE ${CMAKE_SOURCE_DIR}/build/${PROJECT_NAME}.hex)
+set(BIN_FILE ${CMAKE_SOURCE_DIR}/build/${PROJECT_NAME}.bin)
+add_custom_command(     TARGET  ${PROJECT_NAME} POST_BUILD
+                        COMMAND ${CMAKE_OBJCOPY} -Oihex   $<TARGET_FILE:${PROJECT_NAME}> ${HEX_FILE}
+                        COMMAND ${CMAKE_OBJCOPY} -Obinary $<TARGET_FILE:${PROJECT_NAME}> ${BIN_FILE}
+                        COMMENT "Building ${HEX_FILE} \nBuilding ${BIN_FILE}")
+
 
 # target_link_directories( ${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/lib/FreeRTOS-Kernel/build)
 # target_link_libraries( ${PROJECT_NAME} freertos_kernel)
