--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
     "cmake.saveBeforeBuild": true,
-    "cmake.configureOnEdit": false
+    "cmake.configureOnEdit": false,
+    "files.associations": {
+        "stm32f4xx.h": "c",
+        "stm32f411xe.h": "c"
+    }
 }
