--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,11 @@ cmake_minimum_required(VERSION 3.13)
 # Tool Chain Setup
 set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/arm-gcc-toolchain.cmake)
 
-set(CMAKE_BUILD_TYPE Debug)
-# set(CMAKE_DEFAULT_BUILD_TYPE Debug)
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    message("Target set to debug version.")
+elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
+    message("Target set to release.")
+endif()
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
@@ -21,14 +24,6 @@ project( model1 C CXX ASM)
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_C_EXTENSIONS ON)
-
-# set( FREERTOS_CONFIG_FILE_DIRECTORY   "${CMAKE_CURRENT_SOURCE_DIR}/cfg")
-
-# add_subdirectory( lib/lvgl                 ${OUTPUTDIR}/lvgl/build)
-# add_subdirectory( lib/FreeRTOS-Kernel      ${OUTPUTDIR}/FreeRTOS-Kernel/build)
-
-# add_subdirectory(app)
-# aux_source_directory( app source_app)
 
 
 
@@ -65,6 +60,7 @@ include_directories( BEFORE SYSTEM      ${CMAKE_SOURCE_DIR}/lib/STM32CubeF4/Driv
 
 aux_source_directory( ${CMAKE_SOURCE_DIR}/app/component/util    source_app_util)
 aux_source_directory( ${CMAKE_SOURCE_DIR}/app/component/time    source_app_time)
+aux_source_directory( ${CMAKE_SOURCE_DIR}/app/component/trace   source_app_trace)
 aux_source_directory( ${CMAKE_SOURCE_DIR}/bsp     source_bsp)
 aux_source_directory( ${CMAKE_SOURCE_DIR}/cmn     source_cmn)
 aux_source_directory( ${CMAKE_SOURCE_DIR}/lib/STM32CubeF4/Drivers/STM32F4xx_HAL_Driver/Src  source_stm32hal)
@@ -75,11 +71,12 @@ add_definitions(-DCMAKE_EXPORT_COMPILE_COMMANDS=ON)
 
 
 
-add_executable( ${PROJECT_NAME}         ${CMAKE_SOURCE_DIR}/main.c 
+add_executable( ${PROJECT_NAME}.elf     ${CMAKE_SOURCE_DIR}/main.c 
                                         ${startup_script}
                                         ${cmsis_script}
                                         ${source_app_util}
                                         ${source_app_time}
+                                        ${source_app_trace}
                                         ${source_cmn}
                                         ${source_bsp}
                                         ${source_stm32hal})
@@ -87,15 +84,16 @@ add_executable( ${PROJECT_NAME}         ${CMAKE_SOURCE_DIR}/main.c
 
 
 
-target_compile_definitions(${PROJECT_NAME} PRIVATE      ${config_define})
+target_compile_definitions(${PROJECT_NAME}.elf PRIVATE      ${config_define})
 
-target_compile_options( ${PROJECT_NAME} PRIVATE         ${cpu_params}
+target_compile_options( ${PROJECT_NAME}.elf PRIVATE         ${cpu_params}
                                                         -fdata-sections
                                                         -ffunction-sections
                                                         -Wall
+                                                        -Wno-pedantic
                                                         $<$<CONFIG:Debug>:-Og>)
 
-target_link_options(${PROJECT_NAME} PRIVATE             -T${CMAKE_SOURCE_DIR}/cfg/STM32F411CEUX_FLASH.ld
+target_link_options(${PROJECT_NAME}.elf PRIVATE             -T${CMAKE_SOURCE_DIR}/cfg/STM32F411CEUX_FLASH.ld
                                                         ${cpu_params}
                                                         -specs=nano.specs
                                                         -specs=nosys.specs
@@ -107,13 +105,11 @@ target_link_options(${PROJECT_NAME} PRIVATE             -T${CMAKE_SOURCE_DIR}/cf
 
 set(HEX_FILE ${CMAKE_SOURCE_DIR}/build/${PROJECT_NAME}.hex)
 set(BIN_FILE ${CMAKE_SOURCE_DIR}/build/${PROJECT_NAME}.bin)
-add_custom_command(     TARGET  ${PROJECT_NAME} POST_BUILD
-                        COMMAND ${CMAKE_OBJCOPY} -Oihex   $<TARGET_FILE:${PROJECT_NAME}> ${HEX_FILE}
-                        COMMAND ${CMAKE_OBJCOPY} -Obinary $<TARGET_FILE:${PROJECT_NAME}> ${BIN_FILE}
+add_custom_command(     TARGET  ${PROJECT_NAME}.elf POST_BUILD
+                        COMMAND ${CMAKE_OBJCOPY} -Oihex   $<TARGET_FILE:${PROJECT_NAME}.elf> ${HEX_FILE}
+                        COMMAND ${CMAKE_OBJCOPY} -Obinary $<TARGET_FILE:${PROJECT_NAME}.elf> ${BIN_FILE}
                         COMMENT "Building ${HEX_FILE} \nBuilding ${BIN_FILE}")
 
 
-# target_link_directories( ${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/lib/FreeRTOS-Kernel/build)
-# target_link_libraries( ${PROJECT_NAME} freertos_kernel)
 
   
