--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,8 @@
         "rh_cmn_delay.h": "c",
         "rh_cmn.h": "c",
         "rh_bsp.h": "c",
-        "freertos.h": "c"
+        "freertos.h": "c",
+        "rh_cmn_spi.h": "c"
     },
 
 
