--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,7 +96,8 @@ add_definitions( ${config_define} ${lvgl_define})
 add_definitions(-DCMAKE_EXPORT_COMPILE_COMMANDS=ON)
 
 
-add_executable( ${PROJECT_NAME}.elf     ${CMAKE_SOURCE_DIR}/main.c 
+add_executable( ${PROJECT_NAME}.elf                     ${CMAKE_SOURCE_DIR}/main.c
+                                                        ${CMAKE_SOURCE_DIR}/main_dma.c 
                                                         ${startup_script}
                                                         ${cmsis_script}
                                                         ${source_app_util}
