--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,8 @@
         "rh_cmn.h": "c",
         "rh_bsp.h": "c",
         "freertos.h": "c",
-        "rh_cmn_spi.h": "c"
+        "rh_cmn_spi.h": "c",
+        "task.h": "c"
     },
 
 
