Vscode: Add GDB attach configuration

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,36 @@
         {
             "cwd": "${workspaceFolder}",
             "executable": "./build/model1.elf",
-            "name": "Debug with JLink",
+            "name": "Download & Debug with JLink",
             "request": "launch",
+            "type": "cortex-debug",
+            "device": "STM32F411CE",
+            "runToEntryPoint": "main",
+            "svdFile": "/Users/randleh/Desktop/Embedded-Watch/cfg/stm32f411.svd",
+            "interface": "swd",
+            "servertype": "jlink",
+            "swoConfig": {
+                "enabled": true,
+                "cpuFrequency": 96000000,
+                "swoFrequency": 4000000,
+                "source": "probe",
+                "decoders": [
+                    {
+                        "label": "ITM port 0 output",
+                        "type": "console",
+                        "port": 0,
+                        "showOnStartup": true,
+                        "encoding": "ascii"
+                    }
+                ]
+
+            }
+        },
+        {
+            "cwd": "${workspaceFolder}",
+            "executable": "./build/model1.elf",
+            "name": "Attach with JLink",
+            "request": "attach",
             "type": "cortex-debug",
             "device": "STM32F411CE",
             "runToEntryPoint": "main",
